[workspace]
members = [
    "00-connect",
    "01-oblivious-transfer",
    "02-finite-fields",
    "03-garbled-circuits",
    "04-yao-millionaire",
    "common",
    "template"
]
resolver = "2"

[workspace.dependencies]
mpz-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-common = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-circuits = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-garble-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-garble = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-ot = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-ole = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-fields = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-share-conversion = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }

common.path = "./common/"

tokio = { version = "1" }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
serio = { version = "0.1", features = ["codec", "bincode"] }
uid-mux = { version = "0.1", features = ["serio"] }
tracing = "0.1"
anyhow = "1"
matchbox_socket = { git = "https://github.com/th4s/matchbox", branch = "async-channels"}
