[package]
name = "oblivious-transfer"
version = "0.1.0"
edition = "2021"

[dependencies]
common.workspace = true
mpz-ot.workspace = true
mpz-common.workspace = true
mpz-core.workspace = true

futures.workspace = true
anyhow.workspace = true
serio.workspace = true
tokio = { workspace = true, features = ["full"] }

[[bin]]
name = "alice"
path = "src/alice.rs"

[[bin]]
name = "bob"
path = "src/bob.rs"
