[package]
name = "garbled-circuits"
version = "0.1.0"
edition = "2021"

[dependencies]
common.workspace = true
mpz-common.workspace = true
mpz-ot.workspace = true
mpz-garble.workspace = true
mpz-circuits.workspace = true

futures.workspace = true
anyhow.workspace = true
serio.workspace = true
uid-mux.workspace = true
tokio = { workspace = true, features = ["full"] }

[[bin]]
name = "alice"
path = "src/alice.rs"

[[bin]]
name = "bob"
path = "src/bob.rs"
