[package]
name = "yao-millionaire"
version = "0.1.0"
edition = "2021"

[dependencies]
common.workspace = true
mpz-circuits.workspace = true
mpz-common.workspace = true
mpz-garble.workspace = true
mpz-ot.workspace = true

futures.workspace = true
anyhow.workspace = true
serio.workspace = true
tokio.workspace = true

[[bin]]
name = "alice"
path = "src/alice.rs"

[[bin]]
name = "bob"
path = "src/bob.rs"
