[package]
name = "yao-millionaire"
version = "0.1.0"
edition = "2021"

[dependencies]
mpz-circuits.workspace = true
mpz-common.workspace = true
mpz-garble.workspace = true
mpz-ot.workspace = true

futures.workspace = true
anyhow.workspace = true
serio.workspace = true
matchbox_socket.workspace = true

getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen= "=0.2.92"
log = "0.4"
console_error_panic_hook = "0.1.7"
console_log = "1"

[[bin]]
name = "alice"
path = "src/alice.rs"

[[bin]]
name = "bob"
path = "src/bob.rs"
